# kube-switchboard

./: .gitignore  Cargo.toml  Config.toml  README.md
.github/workflows/: rust.yml
assets/macos/Kube Switchboard.app/: Icon.icns
assets/macos/Kube Switchboard.app/Contents/: Info.plist
assets/macos/Kube Switchboard.app/Contents/MacOS/: kube-swb-start
src/: config.rs  main.rs
src/kube_res/: actions.rs  mod.rs  namespaces.rs  pods.rs  services.rs
src/ui/: mod.rs  topbar.rs
src/ui/boards/: mod.rs  status.rs  welcome.rs
utils/: release.rs
