[package]
name = "kube-switchboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name="release"
path="utils/release.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
env_logger = "0.10"
figment = { version = "0.10", features = ["toml", "env"] }
kube = { version = "0.82.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_23"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }