[package]
name = "kube-switchboard"
version = "0.1.0"
edition = "2021"
default-run = "kube-switchboard"

[[bin]]
name="release"
path="utils/release.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
env_logger = "0.10"
figment = { version = "0.10", features = ["toml", "env"] }
kube = { version = "0.85", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }